--- a/crossfit-client/src/main/resources/templates/workout-details.html
+++ b/crossfit-client/src/main/resources/templates/workout-details.html
@@ -15,9 +15,9 @@
 <body>
 <nav th:replace = "~{fragments/navbar::nav}"></nav>
 <div class="container">
-    <div class="row">
+    <div class="row" >
         <!-- Left Side: Training Description Card -->
-        <div class="col-md-12 mt-2" th:object="${currentTrainingDto}">
+        <div class="col-md-12 mt-2 mb-2" th:object="${currentTrainingDto}">
             <div class="card mb-7">
                 <img th:src="@{*{imageUrl}}" class="card-img-top" alt="Training Image">
                 <div class="card-body bg-dark" style="color:white;">
@@ -31,27 +31,21 @@
 
         <!-- Right Side: Comments Section -->
         <div class="col-md-12">
-            <div class="be-comment-block">
-                <h1 class="comments-title">Comments (3)</h1>
+            <div class="be-comment-block" >
+                <h1 class="comments-title" th:text="'Comments: ' + ${displayedCommentsForTheSectionDtos.size()}"></h1>
 
                 <!-- Comment 1 -->
-                <div class="d-flex flex-start mb-4">
+                <div class="d-flex flex-start mb-4" th:each="comment : ${displayedCommentsForTheSectionDtos}">
                     <img class="rounded-circle shadow-1-strong me-3"
                          src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(32).webp" alt="avatar" width="65"
                          height="65" />
                     <div class="card w-100">
                         <div class="card-body p-4">
                             <div class="">
-                                <h5>Johny Cash</h5>
-                                <p class="small">3 hours ago</p>
-                                <p>
-                                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque
-                                    ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus
-                                    viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla.
-                                    Donec lacinia congue felis in faucibus ras purus odio, vestibulum in
-                                    vulputate at, tempus viverra turpis.
+                                <h5 th:text="${comment.author.firstName} + ' ' + ${comment.author.lastName}">Johny Cash</h5>
+                                <p class="small" th:text="${comment.date}"> Date of the comment</p>
+                                <p th:text="${comment.text}">
                                 </p>
-
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="d-flex align-items-center">
                                         <a href="#!" class="link-muted me-2"><i class="fas fa-thumbs-up me-1"></i>132</a>
@@ -62,73 +56,24 @@
                         </div>
                     </div>
                 </div>
-
-                <!-- Comment 2 -->
-                <div class="d-flex flex-start mb-4">
-                    <img class="rounded-circle shadow-1-strong me-3"
-                         src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(32).webp" alt="avatar" width="65"
-                         height="65" />
-                    <div class="card w-100">
-                        <div class="card-body p-4">
-                            <div class="">
-                                <h5>Johny Cash</h5>
-                                <p class="small">3 hours ago</p>
-                                <p>
-                                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque
-                                </p>
-
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="d-flex align-items-center">
-                                        <a href="#!" class="link-muted me-2"><i class="fas fa-thumbs-up me-1"></i>132</a>
-                                        <a href="#!" class="link-muted"><i class="fas fa-thumbs-down me-1"></i>15</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="d-flex flex-start mb-4">
-                    <img class="rounded-circle shadow-1-strong me-3"
-                         src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(32).webp" alt="avatar" width="65"
-                         height="65" />
-                    <div class="card w-100">
-                        <div class="card-body p-4">
-                            <div class="">
-                                <h5>Johny Cash</h5>
-                                <p class="small">3 hours ago</p>
-                                <p>
-                                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque
-                                    ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus
-                                    viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla.
-                                    Donec lacinia congue felis in faucibus ras purus odio, vestibulum in
-                                    vulputate at, tempus viverra turpis.
-                                </p>
-
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="d-flex align-items-center">
-                                        <a href="#!" class="link-muted me-2"><i class="fas fa-thumbs-up me-1"></i>132</a>
-                                        <a href="#!" class="link-muted"><i class="fas fa-thumbs-down me-1"></i>15</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Comment Form -->
-                <form class="form-block"  th:if="${isAuthenticated}" th:method="POST" th:action="@{/workout/details/comment}">
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <div class="form-group">
-                                <textarea class="form-input" placeholder="Your text"></textarea>
-                            </div>
-                        </div>
-                        <div class="col-xs-12">
-                            <button class="btn btn-primary pull-right" type="submit">Submit</button>
-                        </div>
-                    </div>
-                </form>
             </div>
         </div>
+        <!-- Comment Form -->
+        <!-- Comment Form -->
+        <h5 class="mt-3">Add Comment Section</h5>
+        <form class="form-block" th:if="${isAuthenticated}" th:method="POST"
+              th:action="@{/workouts/details/comment/{trainingsType}(trainingsType=${trainingType})}">
+            <div class="row mt-2">
+                <div class="col-xl-12">
+                    <div class="form-group">
+                            <textarea class="form-input" id="comment" name="description" placeholder="Add your comment here"></textarea>
+                    </div>
+                </div>
+                <div class="col-xs-12 mb-2">
+                    <button class="btn btn-primary pull-right" type="submit">Submit</button>
+                </div>
+            </div>
+        </form>
     </div>
 </div>
 <footer th:replace="~{fragments/footer::footer}"></footer>
