--- a/crossfit-client/src/main/resources/templates/auth-login.html
+++ b/crossfit-client/src/main/resources/templates/auth-login.html
@@ -1,51 +1,46 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head >
-    <title>Login Page</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
+<head>
+    <meta charset="UTF-8">
+    <title th:text="#{login.title}">Login Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link th:href="@{/css/login.css}" rel="stylesheet"/>
-
 </head>
 <body style="background: url('/images/login.jpg') no-repeat center center fixed; background-size: cover;">
 <div class="container">
 
-    <form  th:action="@{/users/login}" th:method="POST">
+    <form th:action="@{/users/login}" th:method="POST">
         <!-- Display success message -->
         <div th:if="${successMessage}" class="alert alert-success" role="alert">
             <p th:text="${successMessage}"></p>
         </div>
 
-        <!-- Display success message -->
+        <!-- Display error message -->
         <div th:if="${badRequest}" class="alert alert-danger" role="alert">
             <p th:text="${badRequest}"></p>
         </div>
-    <h1>Please Log In</h1>
+
+        <h1 th:text="#{login.heading}">Please Log In</h1>
         <div class="form-control">
             <input type="text" name="username" required>
-            <label >Username</label>
+            <label th:text="#{login.username}">Username</label>
         </div>
         <div class="form-control">
             <input type="password" name="password" required>
-            <label >Password</label>
+            <label th:text="#{login.password}">Password</label>
         </div>
 
         <div class="toggle-container">
             <input type="checkbox" id="rememberme" class="toggle" name="rememberme">
             <label for="rememberme" class="slider round"></label>
-            <span class="mytext">Remember me</span> <!-- TODO : FIX IT  -->
+            <span class="mytext" th:text="#{login.remember.me}">Remember me</span>
         </div>
 
-        <button class="btn">
-            LogIn
-        </button>
-        <p class="text"> Don't have an account ?
-            <a th:href="@{/users/register}">Register</a></p>
+        <button class="btn" type="submit" th:text="#{login.submit}">Log In</button>
+        <p class="text" >Don't have an account?
+            <a th:href="@{/users/register}" th:text="#{login.register.link}">Register</a></p>
     </form>
 </div>
-<script th:src="@{/js/login.js}" ></script>
+<script th:src="@{/js/login.js}"></script>
 </body>
 </html>
-
