--- a/crossfit-client/src/main/resources/templates/fragments/navbar.html
+++ b/crossfit-client/src/main/resources/templates/fragments/navbar.html
@@ -39,7 +39,7 @@
                     <a class="nav-link" th:href="@{/workouts}" th:text="#{nav_bar_workouts}" >Workouts</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a class="nav-link" th:href="@{/events/add-event/{id}(id=${#authentication.principal.id})}" th:text="#{nav_bar_add_event}">Add Event</a>
+                    <a class="nav-link" th:href="@{/events/publish-event}" th:text="#{nav_bar_add_event}">Add Event</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated() and !hasRole('ADMIN')">
                     <a class="nav-link" th:href="@{/my-workouts}" th:text="#{nav_bar_my_workouts}">My Workouts</a>
