Adding some tests

--- a/crossfit-client/src/main/resources/templates/workout-details.html
+++ b/crossfit-client/src/main/resources/templates/workout-details.html
@@ -66,7 +66,7 @@
             <div class="row mt-2">
                 <div class="col-xl-12">
                     <div class="form-group">
-                            <textarea class="form-input" id="comment" name="description" placeholder="Add your comment here"></textarea>
+                            <textarea class="form-input" id="description" name="description" placeholder="Add your comment here"></textarea>
                     </div>
                 </div>
                 <div class="col-xs-12 mb-2">
